# FileTransporter

./: Actions.cpp  Actions.hpp  CMakeLists.txt  ClassFactory.hpp  ComUtils.cpp  ComUtils.hpp  ContextMenuHandler.cpp  ContextMenuHandler.hpp  DllMain.cpp  FileOperations.cpp  FileOperations.hpp  FileTransporter.def  FileTransporter.sln  FileTransporter.vcxproj  FileTransporter.vcxproj.filters  MenuItem.cpp  MenuItem.hpp  README.md  Reg.cpp  Shared.hpp
cmake/: ensure_vcpkg.cmake
src/: ClassFactory.cpp  ContextMenuHandler.cpp  ContextMenuHandler.hpp  DllMain.cpp  FileOperations.hpp  Reg.cpp  Reg.hpp  Shared.hpp
